<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/home_camera_btn"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-condensed"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"

        android:text="@string/app_title"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textAlignment="center"/>

    <ImageView
        android:layout_width="10dp"
        android:layout_height="10dp"
        app:srcCompat="@drawable/ic_leaf_white"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="125dp"
        android:layout_marginTop="19dp"
        />

    <ImageButton
        android:id="@+id/home_camera_btn"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:padding="25dp"
        android:background="@drawable/shape_circle"
        android:contentDescription="@string/img_camera_btn"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bar"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/ic_barcode" />

    <EditText
        android:id="@+id/home_search_bar"
        android:background="@drawable/shape_searchbar"
        android:drawableEnd="@drawable/ic_search"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/txt_search_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_camera_btn" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:paddingTop="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_search_bar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rview_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/home_add_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_addbtn"
        android:text="@string/AddBtn"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ImageButton
        android:id="@+id/map_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/title_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.950"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10"
        app:srcCompat="@drawable/ic_map_white_home" />

</androidx.constraintlayout.widget.ConstraintLayout>